e olvide el buton

--- a/resources/html/comprar.html
+++ b/resources/html/comprar.html
@@ -79,6 +79,7 @@
               </li>
         </ul>
         <p>Total: 20.000$</p>
+        <button>Pagar ahora</button>
       </div>
       <br />
       
